@@ -21,6 +21,8 @@ Release 0.20.0 - Unreleased
                part 2, and part 3 (Evgeny Ryabitskiy via Stack)
    HBASE-896   Update jruby from 1.1.2 to 1.1.6
    HBASE-1031  Add the Zookeeper jar
+   HBASE-1142  Cleanup thrift server; remove Text and profuse DEBUG messaging
+               (Tim Sell via Stack)
 
 Release 0.19.0 - Unreleased
   INCOMPATIBLE CHANGES
